@@ -1,3 +1,10 @@
+2014-09-10  Timothy Horton  <timothy_horton@apple.com>
+
+        Fix the build.
+
+        * platform/network/ResourceHandle.h:
+        * platform/network/mac/ResourceHandleMac.mm:
+
 2014-09-09  Myles C. Maxfield <mmaxfield@apple.com>  <litherum@gmail.com>
 
         Delete class SavedDrawingStateForMask
